src/assets/css/sections/header.sass
.logos
  padding: 20px 2.5%
  align-items: center
  justify-content: center
  .flex
    @include desktop
      align-items: center
      justify-content: center
      width: 100%

  h2.only-mobile
    display: block
    margin-left: auto
    margin-right: auto

.join-title
  color: $c0
  text-align: center
  font-family: default-font(700)
  @include break-min(240px)
    font-size: rem(24px)
  @include break-min(769px)
    font-size: rem(36px)
  @include desktop
    width: 500px

h2
  color: $c0
  text-align: center
  font-family: default-font(700)

.wwf
  max-width: 320px
  height: auto
  @include break-min(769px)
    margin-left: 10px
  @include break-max(769px)
    width: calc(48% - 20px)
    margin-left: 5px
    margin-right: 20px

.wwfl-logo
  width: 48%
  padding: 0 0 0 20px
  border-left: 1px solid $c0

  img
    width: 100%
    height: auto

.wwfl
  max-width: 234px
  height: auto

